--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,12 @@
 	"invite": {
 		"description": "Send the bot's invitation link."
 	},
+  "jumpto": {
+    "description": "Jump to the selected queue number.",
+    "usageReply": "Usage: {prefix}jumpto <Queue number>",
+    "errorNotValid": "This is not a valid position.",
+    "result": "Jump to queue position {arg} completed"
+  },
 	"loop": {
 		"description": "Loop the music.",
 		"chooseMode": "Choose loop mode.",
@@ -61,12 +67,12 @@
 		"result": "Pruning is {result}."
 	},
 	"queue": {
-		"description": "Display the queue and the currently playing song.",
+    "description": "Display the queue and the currently playing song.",
     "currentPage": "Current Page - ",
-		"embedTitle": "Server Queue:\n",
+    "embedTitle": "Server Queue:\n",
     "embedCurrentSong": "**Current Track - [{title}]({url})**\n\n{info}",
     "nothingMore": "There's nothing more after this."
-	},
+  },
 	"remove": {
 		"description": "Remove a song from the queue.",
 		"usageReply": "Usage: {prefix}remove <Number in the queue>",
@@ -98,12 +104,6 @@
 	"skip": {
 		"description": "Skip the currently playing song.",
 		"result": "Skipped the song. ⏩"
-	},
-	"skipto": {
-		"description": "Skip to the selected queue number.",
-		"usageReply": "Usage: {prefix}{name} <Queue index>",
-		"errorNotValid": "The queue only contains {length} songs!",
-		"result": "Skipped {arg} songs."
 	},
 	"stop": {
 		"description": "Stop the music.",
