--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -12,6 +12,12 @@
 	"invite": {
 		"description": "Envoie le lien d'invitation du bot."
 	},
+  "jumpto": {
+    "description": "Sauter à la position sélectionnée dans la file d'attente.",
+    "usageReply": "Utilisation : {prefix}jumpto <Numéro dans la file d'attente>",
+    "errorNotValid": "Ce n'est pas une position valide.",
+    "result": "Saut à la position {arg} effectué"
+  },  
 	"loop": {
 		"description": "Met la musique en boucle.",
 		"chooseMode": "Choisissez le mode de boucle.",
@@ -84,13 +90,13 @@
 		"chooseSong": "Choisissez le morceau à jouer.",
 		"finished": "Recherche terminée."
 	},
-  "seek": {
-    "description": "Permet de sauter à un moment précis dans la musique en cours.",
-    "usageReply": "Utilisation : {prefix}seek <Nombre de secondes ou temps au format (ex: 02:30)>",
-    "errorSource": "Cette commande ne fonctionne pas avec les liens SoundCloud ni les fichiers audio.",
-    "errorNotValid": "Le nombre de secondes doit être compris entre 0 et la durée de la piste ({duration}).",
-    "result": "La musique a été repositionnée à : `{time}`"
-  },
+	"seek": {
+		"description": "Permet de sauter à un moment précis dans la musique en cours.",
+		"usageReply": "Utilisation : {prefix}seek <Nombre de secondes ou temps au format (ex: 02:30)>",
+		"errorSource": "Cette commande ne fonctionne pas avec les liens SoundCloud ni les fichiers audio.",
+		"errorNotValid": "Le nombre de secondes doit être compris entre 0 et la durée de la piste ({duration}).",
+		"result": "La musique a été repositionnée à : `{time}`"
+	},
 	"shuffle": {
 		"description": "Mélange la file d'attente.",
 		"result": "La file d'attente a été mélangée. 🔀"
@@ -98,13 +104,7 @@
 	"skip": {
 		"description": "Passe la musique en cours de lecture.",
 		"result": "Musique passée. ⏩"
-	},
-	"skipto": {
-		"description": "Passe au numéro de file d'attente sélectionné.",
-		"usageReply": "Utilisation : {prefix}{name} <Numéro dans la file d'attente>",
-		"errorNotValid": "La file d'attente contient seulement {length} chansons !",
-		"result": "{arg} musiques passées."
-	},
+	},  
 	"stop": {
 		"description": "Arrête la musique.",
 		"result": "Musique arrêtée. ⏹"
@@ -130,7 +130,7 @@
 		"playlistAdded": "✅ La playlist [**{title}**]({url}) ({length} pistes) a été ajoutée à la file d'attente.",
 		"queueEnded": "La file d'attente est terminée.",
 		"leaveChannel": "Je quitte le salon vocal.",
-    "error": "Une erreur s'est produite lors de la tentative de lecture de l'audio."
+		"error": "Une erreur s'est produite lors de la tentative de lecture de l'audio."
 	},
 	"common": {
 		"on": "**activé**",
