--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "autoplay": {
+    "description": "Enables automatic queue filling.",
+    "result": "Autoplay is now {mode}."
+  },
   "help": {
     "description": "Display all commands and their descriptions.",
     "embedTitle": "{botname} Help",
