--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,4 +1,8 @@
 {
+  "autoplay": {
+    "description": "Active le remplissage automatique de la queue.",
+    "result": "L'autoplay est maintenant {mode}."
+  },
   "help": {
     "description": "Affiche toutes les commandes et leurs descriptions.",
     "embedTitle": "Aide {botname}",
